// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResthookRouterForm render should render 1`] = `
<Dialog
  buttons={
    Object {
      "primary": Object {
        "disabled": true,
        "name": "Ok",
        "onClick": [Function],
      },
      "secondary": Object {
        "name": "Cancel",
        "onClick": [Function],
      },
    }
  }
  headerClass="call_resthook"
  title="Call Zapier"
>
  <TypeList
    __className=""
    initialType={
      Object {
        "aliases": Array [
          "split_by_resthook",
        ],
        "component": [Function],
        "description": "Call Zapier",
        "form": [Function],
        "localization": [Function],
        "localizeableKeys": Array [
          "exits",
        ],
        "name": "Call Zapier",
        "type": "call_resthook",
      }
    }
    onChange={[MockFunction]}
  />
  <AssetSelector
    entry={
      Object {
        "value": Object {
          "id": "my-resthook",
          "name": "my-resthook",
          "type": "resthook",
        },
      }
    }
    name="Resthook"
    onChange={[Function]}
    placeholder="Select the resthook to call"
    searchable={true}
  />
</Dialog>
`;

exports[`ResthookRouterForm updates coverts from other node types 1`] = `
Array [
  Object {
    "inboundConnections": Object {},
    "node": Object {
      "actions": Array [
        Object {
          "resthook": "new-resthook",
          "type": "call_resthook",
          "uuid": "35a6eff8-dd6e-4e07-b605-73da32c83c9c",
        },
      ],
      "exits": Array [
        Object {
          "destination_node_uuid": "b1f332f3-bdd3-4891-aec5-1843a712dbf1",
          "name": "Success",
          "uuid": "054be440-a819-4bcf-898e-d18084ab7f4e",
        },
        Object {
          "destination_node_uuid": "061fc171-8b79-4636-b892-bd0ea5aa9b42",
          "name": "Failed",
          "uuid": "70dbfd3f-a501-42cb-b53d-3c4290ab8d58",
        },
        Object {
          "destination_node_uuid": "1dce2b34-9aab-4e20-81c4-3f0408dcb671",
          "name": "Unreachable",
          "uuid": "5edcac28-a5f2-4fc2-81c4-d5d184d6560c",
        },
      ],
      "router": Object {
        "cases": Array [
          Object {
            "arguments": Array [
              "success",
            ],
            "exit_uuid": "054be440-a819-4bcf-898e-d18084ab7f4e",
            "type": "has_webhook_status",
            "uuid": "0d377671-c887-46df-a08a-22589cd50554",
          },
          Object {
            "arguments": Array [
              "response_error",
            ],
            "exit_uuid": "70dbfd3f-a501-42cb-b53d-3c4290ab8d58",
            "type": "has_webhook_status",
            "uuid": "4be01054-1592-4193-8abd-b673e9ae8dcc",
          },
          Object {
            "arguments": Array [
              "response_failure",
            ],
            "exit_uuid": "5edcac28-a5f2-4fc2-81c4-d5d184d6560c",
            "type": "has_webhook_status",
            "uuid": "4a6149dc-042b-4f2b-a7b5-ba6e86a5e72d",
          },
        ],
        "default_exit_uuid": null,
        "operand": "@child",
        "type": "switch",
      },
      "uuid": "e4e66707-8798-4760-ba10-ab25c3da767c",
      "wait": null,
    },
    "ui": Object {
      "config": Object {},
      "position": null,
      "type": "split_by_resthook",
    },
  },
]
`;

exports[`ResthookRouterForm updates creates its own action uuid if necessary 1`] = `
Array [
  Object {
    "inboundConnections": Object {},
    "node": Object {
      "actions": Array [
        Object {
          "resthook": "new-resthook",
          "type": "call_resthook",
          "uuid": "1e47a1e1-3c67-4df5-adf1-da542c789adb",
        },
      ],
      "exits": Array [
        Object {
          "destination_node_uuid": null,
          "name": "Success",
          "uuid": "132de855-4042-4dc1-a18f-cc2e6a8f790a",
        },
        Object {
          "destination_node_uuid": null,
          "name": "Failed",
          "uuid": "2dc85899-0577-4f1b-a620-f12094e34b5e",
        },
        Object {
          "destination_node_uuid": null,
          "name": "Unreachable",
          "uuid": "42ebf1d0-a43e-4ba6-9577-c863b20c88c4",
        },
      ],
      "router": Object {
        "cases": Array [
          Object {
            "arguments": Array [
              "success",
            ],
            "exit_uuid": "132de855-4042-4dc1-a18f-cc2e6a8f790a",
            "type": "has_webhook_status",
            "uuid": "70ac6ea6-803a-4c33-81c7-dc26803c313f",
          },
          Object {
            "arguments": Array [
              "response_error",
            ],
            "exit_uuid": "2dc85899-0577-4f1b-a620-f12094e34b5e",
            "type": "has_webhook_status",
            "uuid": "e67ce051-f3e4-4c42-807b-e393df5fa382",
          },
          Object {
            "arguments": Array [
              "connection_error",
            ],
            "exit_uuid": "42ebf1d0-a43e-4ba6-9577-c863b20c88c4",
            "type": "has_webhook_status",
            "uuid": "e0bc3776-792f-49d2-b4be-48be2cf8159a",
          },
        ],
        "default_exit_uuid": null,
        "operand": "@child",
        "type": "switch",
      },
      "uuid": "e4e66707-8798-4760-ba10-ab25c3da767c",
      "wait": null,
    },
    "ui": Object {
      "config": Object {},
      "position": null,
      "type": "split_by_resthook",
    },
  },
]
`;

exports[`ResthookRouterForm updates should update and save 1`] = `
Object {
  "resthook": Object {
    "validationFailures": Array [],
    "value": Object {
      "id": "new-resthook",
      "name": "new-resthook",
      "type": "resthook",
    },
  },
  "valid": true,
}
`;

exports[`ResthookRouterForm updates should update and save 2`] = `
Array [
  Object {
    "inboundConnections": Object {},
    "node": Object {
      "actions": Array [
        Object {
          "resthook": "new-resthook",
          "type": "call_resthook",
          "uuid": "35a6eff8-dd6e-4e07-b605-73da32c83c9c",
        },
      ],
      "exits": Array [
        Object {
          "destination_node_uuid": "b1f332f3-bdd3-4891-aec5-1843a712dbf1",
          "name": "Success",
          "uuid": "054be440-a819-4bcf-898e-d18084ab7f4e",
        },
        Object {
          "destination_node_uuid": "061fc171-8b79-4636-b892-bd0ea5aa9b42",
          "name": "Failed",
          "uuid": "70dbfd3f-a501-42cb-b53d-3c4290ab8d58",
        },
        Object {
          "destination_node_uuid": "1dce2b34-9aab-4e20-81c4-3f0408dcb671",
          "name": "Unreachable",
          "uuid": "5edcac28-a5f2-4fc2-81c4-d5d184d6560c",
        },
      ],
      "router": Object {
        "cases": Array [
          Object {
            "arguments": Array [
              "success",
            ],
            "exit_uuid": "054be440-a819-4bcf-898e-d18084ab7f4e",
            "type": "has_webhook_status",
            "uuid": "0d377671-c887-46df-a08a-22589cd50554",
          },
          Object {
            "arguments": Array [
              "response_error",
            ],
            "exit_uuid": "70dbfd3f-a501-42cb-b53d-3c4290ab8d58",
            "type": "has_webhook_status",
            "uuid": "4be01054-1592-4193-8abd-b673e9ae8dcc",
          },
          Object {
            "arguments": Array [
              "response_failure",
            ],
            "exit_uuid": "5edcac28-a5f2-4fc2-81c4-d5d184d6560c",
            "type": "has_webhook_status",
            "uuid": "4a6149dc-042b-4f2b-a7b5-ba6e86a5e72d",
          },
        ],
        "default_exit_uuid": null,
        "operand": "@child",
        "type": "switch",
      },
      "uuid": "e4e66707-8798-4760-ba10-ab25c3da767c",
      "wait": null,
    },
    "ui": Object {
      "config": Object {},
      "position": null,
      "type": "split_by_resthook",
    },
  },
]
`;
